CONTAINERS  IconTabBar, IconTabFilter

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -5,3 +5,7 @@ helloMsg=Hello {0}
 # App Descriptor
 appTitle=My demo app
 appDescription=A simple demo app
+
+# Tabs
+gettingStartedFilter=Getting Started
+layoutFilter=Containers and Layout
